--- a/.github/workflows/master_bouillonchanvre.yml
+++ b/.github/workflows/master_bouillonchanvre.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: ./myapp # Ensure the artifact is extracted to the correct directory
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -58,4 +59,5 @@ jobs:
         with:
           app-name: "bouillonchanvre"
           slot-name: "Production"
-          package: ./myapp
+          package: ./myapp # Use the correct directory for the deployment package
+
