--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:bouillonchanvreserver.database.windows.net,1433;Initial Catalog=bouillonchanvredb;Persist Security Info=False;User ID=sqladmin;Password={PASSWORD};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:bouillonchanvreserver.database.windows.net,1433;Initial Catalog=bouillonchanvredb;Persist Security Info=False;User ID=sqladmin;Password={Password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
