--- a/BouillonChanvre.csproj
+++ b/BouillonChanvre.csproj
@@ -15,5 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\**\*.razor" />
+  </ItemGroup>
 
 </Project>
